Fix Photoclipping

--- a/src/App.scss
+++ b/src/App.scss
@@ -286,7 +286,7 @@ li.alice-carousel__dots-item.__custom {
 
 .default_image {
   background-color: rgb(24, 22, 22);
-  height: 150px;
+  height: 180px;
   font-size: 20px;
   padding: 20px;
   text-overflow: ellipsis;
